--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "egg-cors": "^2.0.0",
     "egg-jwt": "^2.2.0",
     "egg-mongoose": "^2.1.1",
+    "egg-passport": "^2.1.0",
+    "egg-passport-github": "^1.0.0",
     "egg-scripts": "^2.1.0",
     "egg-validate": "^1.0.0",
     "image-downloader": "^3.3.0",
