--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "private": false,
   "dependencies": {
+    "@octokit/app": "^4.1.0",
+    "@octokit/rest": "^16.30.1",
     "await-stream-ready": "^1.0.1",
     "egg": "^2.0.0",
     "egg-bcrypt": "^1.0.0",
     "egg-cors": "^2.0.0",
     "egg-jwt": "^2.2.0",
     "egg-mongoose": "^2.1.1",
-    "egg-passport": "^2.1.0",
-    "egg-passport-github": "^1.0.0",
     "egg-scripts": "^2.1.0",
     "egg-validate": "^1.0.0",
     "image-downloader": "^3.3.0",
