--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "egg-passport": "^2.1.0",
     "egg-scripts": "^2.1.0",
     "egg-validate": "^1.0.0",
+    "egg-view-handlebars": "^2.0.1",
     "image-downloader": "^3.3.0",
     "mocha": "^4.0.1",
     "moment": "^2.20.1",
