--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "egg-cors": "^2.0.0",
     "egg-jwt": "^2.2.0",
     "egg-mongoose": "^2.1.1",
-    "egg-passport": "^2.1.0",
+    "egg-redis": "^2.4.0",
     "egg-scripts": "^2.1.0",
     "egg-validate": "^1.0.0",
     "egg-view-handlebars": "^2.0.1",
+    "highlight.js": "^9.16.2",
     "image-downloader": "^3.3.0",
+    "markdown-it": "^10.0.0",
     "mocha": "^4.0.1",
     "moment": "^2.20.1",
-    "passport-local": "^1.0.0",
     "stream-to-array": "^2.3.0",
     "stream-wormhole": "^1.0.3"
   },
