--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "egg-view-handlebars": "^2.0.1",
     "highlight.js": "^9.16.2",
     "image-downloader": "^3.3.0",
+    "jsdom": "^15.2.1",
     "markdown-it": "^10.0.0",
     "mocha": "^4.0.1",
     "moment": "^2.20.1",
