--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "egg-scripts": "^2.1.0",
     "egg-validate": "^1.0.0",
     "egg-view-handlebars": "^2.0.1",
+    "egg-view-nunjucks": "^2.2.0",
     "highlight.js": "^9.16.2",
     "image-downloader": "^3.3.0",
     "jsdom": "^15.2.1",
